--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,7 +40,12 @@ jobs:
 
       - name: Deploy to GitHub Pages (only for main)
         if: github.ref == 'refs/heads/main'
-        run: npx gh-pages -d dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config --global user.email "mdirfan844@gmail.com"
+          git config --global user.name "Irfan223"
+          npx gh-pages -d dist -u "Irfan223 <mdirfan844@gmail.com>"
 
       - name: Simulate deployment for dev/test/uat
         if: github.ref != 'refs/heads/main'
